--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-langchain
+langchain~=1.2.10
+fastapi~=0.128.8
+uvicorn[standard]~=0.32.0
+python-dotenv~=1.2.1
+langfuse~=3.14.1
+requests~=2.32.5
+pytest~=9.0.2
+langgraph
+streamlit~=1.54.0
+langchain-core~=1.2.11
+pydantic~=2.12.5
+langchain-community~=0.3.31
 langchain-openai
-fastapi
-python-dotenv
-langfuse
-requests
-pytest
+langgraph-checkpoint-postgres
+psycopg[binary,pool]
+asyncpg
+asyncio
+rich
