Flight Booking Tool Added

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ langchain-core~=1.2.11
 pydantic~=2.12.5
 langchain-community~=0.3.31
 langchain-openai
+langchain_core
 langgraph-checkpoint-postgres
 psycopg[binary,pool]
 asyncpg
